--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -303,6 +303,9 @@
   "detOtpQrWrongBody": "Ваш QR-код был успешно проверен, но он не содержит данных одноразового пароля.",
   "detLockField": "Заблокируйте это поле, чтобы его содержимое не было доступно для поиска и не было видно. Для отображения содержимого потребуется явное нажатие на него.",
   "detUnlockField": "Разблокируйте это поле, чтобы сделать его содержимое доступным для поиска и видимым",
+  "detRevealField": "Показать",
+  "detHideField": "Скрыть",
+  "detAutoTypeField": "Автозаполнение",
   "autoTypeEntryFields": "Поля ввода",
   "autoTypeModifiers": "Клавиши-модификаторы",
   "autoTypeKeys": "Ключи",
