--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -176,6 +176,7 @@
   "searchOptions": "オプション",
   "searchCase": "大文字小文字を区別",
   "searchRegex": "正規表現",
+  "searchRank": "自動",
   "openOpen": "開く",
   "openNew": "新規作成",
   "openMore": "更に表示",
@@ -302,6 +303,7 @@
   "detOtpQrWrongBody": "QRコードの読み取りは成功しましたが、ワンタイムパスワードが含まれていませんでした。",
   "detLockField": "このフィールドをロックすると、内容が検索の対象外となり表示もされません。内容を表示するには明示的にクリックすることが必要となります。",
   "detUnlockField": "このフィールドをアンロックすると、直ちに内容が検索の対象となり表示もされます。",
+  "detRevealField": "表示",
   "detHideField": "隠す",
   "detAutoTypeField": "自動入力",
   "autoTypeEntryFields": "入力フィールド",
@@ -434,6 +436,7 @@
   "setFileSync": "同期",
   "setFileSyncVerb": "同期",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "最終同期",
   "setFileLastSyncUnknown": "不明",
   "setFileSyncInProgress": "同期中",
@@ -581,9 +584,12 @@
   "authPopupRequiredBody": "ブラウザの設定でポップアップを許可してから再度お試しください。",
   "exportFileInfo": "ファイル情報",
   "exportHtmlName": "名前",
+  "exportHtmlDate": "出力データ",
+  "exportGenerator": "ソフトウェア",
   "exportDescription": "このファイルは{}で生成されます",
   "importCsvTitle": "CSVをインポート",
   "importCsvRun": "インポート",
+  "importIgnoreField": "無視する",
   "importTo": "エントリーは既にインポートされています",
   "importNewFile": "ファイルを新規作成する"
 }
