--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "Papierkorb leeren?",
   "menuEmptyTrashAlertBody": "Die Einträge können nicht wiederhergestellt werden",
   "menuItemCollapsed": "Doppelklick zum Aufklappen",
+  "menuRestoreApp": "{} öffnen",
+  "menuQuitApp": "{} beenden",
   "alertYes": "Ja",
   "alertNo": "Nein",
   "alertOk": "OK",
@@ -177,6 +179,7 @@
   "searchCase": "Groß/klein",
   "searchRegex": "RegEx",
   "searchRank": "Automatisch",
+  "searchExact": "Exakt",
   "openOpen": "Öffnen",
   "openNew": "Neu",
   "openMore": "Mehr",
