--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "Opróżnić kosz?",
   "menuEmptyTrashAlertBody": "Nie będziesz mógł przywrócić elementów",
   "menuItemCollapsed": "Dwukrotnie kliknij, aby rozwinąć",
+  "menuRestoreApp": "Otwórz {}",
+  "menuQuitApp": "Zamknij {}",
   "alertYes": "Tak",
   "alertNo": "Nie",
   "alertOk": "OK",
@@ -177,6 +179,7 @@
   "searchCase": "Wielkość liter",
   "searchRegex": "RegEx",
   "searchRank": "Automatycznie",
+  "searchExact": "Dokładny",
   "openOpen": "Otwórz",
   "openNew": "Nowy",
   "openMore": "Więcej",
@@ -411,7 +414,7 @@
   "setGenNoClear": "Nie czyść",
   "setGenClearSeconds": "Po {} sekundach",
   "setGenClearMinute": "Po minucie",
-  "setGenMinInstead": "Minimalizuj aplikację zamiast zamykania",
+  "setGenMinInstead": "Zminimalizuj aplikację zamiast ją zamykać",
   "setGenLock": "Autoblokowanie",
   "setGenLockMinimize": "Gdy aplikacja jest zminimalizowana",
   "setGenLockCopy": "Po skopiowaniu hasła",
