--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "Çöp Boşaltılsın Mı? ",
   "menuEmptyTrashAlertBody": "Ögeler geri gelmeyecektir",
   "menuItemCollapsed": "Genişletmek için çift tıkla",
+  "menuRestoreApp": "Aç {}",
+  "menuQuitApp": "Çık {}",
   "alertYes": "Evet",
   "alertNo": "Hayır",
   "alertOk": "Tamam",
@@ -177,6 +179,7 @@
   "searchCase": "Durum eşleştir",
   "searchRegex": "Düzenli ifade",
   "searchRank": "Sıra",
+  "searchExact": "Kesin",
   "openOpen": "Aç",
   "openNew": "Yeni",
   "openMore": "Dahası",
@@ -216,14 +219,14 @@
   "openError": "Hata",
   "openErrorDescription": "Dosya açılırken bir hata oluştu",
   "openErrorFileNotFound": "Dosya bulunamadı",
-  "openListErrorBody": "Dosya yükleme listesinde bir hata var.",
+  "openListErrorBody": "Dosya listesi yüklenirken bir hata yaşandı",
   "openShowAllFiles": "Tüm dosyaları göster",
-  "openFileNoCacheError": "Önbellek deposunda dosya bulunamadı. Bu olabilir, tarayıcı depolama alanı temizlendi. Dosyayı açmak için, KeeWeb'den kaldırın ve tekrar ekleyin.",
+  "openFileNoCacheError": "Önbellek deposunda dosya bulunamadı. Bu olabilir, çünkü tarayıcı depolama alanı temizlendi. Dosyayı açmak için, KeeWeb'den kaldırın ve tekrar ekleyin.",
   "detAttDownload": "İndirmek için ek dosya butonuna Shift tuşuna basarak tıklayın ya da",
   "detAttDelToRemove": "Kaldırmak için sil",
   "detEmpty": "Parolalarınız burada gösterilecek",
   "detGroupRestore": "Bu kümeyi geri yüklemek için lütfen çöp kutusunun dışındaki herhangi bir kümeye sürükleyin",
-  "detHistoryClickPoint": "Durumu görüntülemek için giriş geçmişi zaman çizelgesi noktasını tıklayın",
+  "detHistoryClickPoint": "Durumu görüntülemek için girdi geçmişine ait zaman çizelgesi noktasına tıklayın",
   "detHistoryReturn": "girdiye geri dön",
   "detHistoryRevert": "Duruma döndür",
   "detHistoryDel": "Durumu sil",
@@ -298,7 +301,7 @@
   "detOtpImageErrorBody": "Üzgünüm, resim biçimini okuyamadık, lütfen hata ayrıntılarıyla ilgili uygulama geliştiricilerine başvurun.",
   "detOtpImageReading": "QR kod okunuyor...",
   "detOtpQrError": "QR kod tarama hatası",
-  "detOtpQrErrorBody": "Üzgünüz, QR kodu okuyamadık, bir kez daha deneyin ya da uygulama yöneticisine hata ayrıntısı ile birlikte iletişime geçin.",
+  "detOtpQrErrorBody": "Üzgünüz, QR kodu okuyamadık, lütfen bir kez daha deneyin ya da hata detayları ile birlikte uygulama yöneticisiyle iletişime geçin.",
   "detOtpQrWrong": "Yanlış QR kodu",
   "detOtpQrWrongBody": "Qr kodunuz başarıyla tarandı ama tek seferlik parola bilgisi içermiyor.",
   "detLockField": "Bu alanı kilitle, böylece içerik aranamaz ve görünmez. İçeriğin görüntülenmesi tıklamanız gerekir.",
@@ -324,7 +327,7 @@
   "autoTypeSelectionHintShift": "Diğer alanlar",
   "autoTypeSelectionOtp": "Tek kullanımlık parola",
   "appSecWarn": "Güvenli Değil!",
-  "appSecWarnBody1": "Uygulamayı güvensiz bir bağlantıdan yüklediniz. Birileri sizi izliyor ve şifrenizi çalmaya çalışıyor olabilir. Tam olarak ne yapacağını anlamadıysanız, uygulamayı durdurmanızı önemle tavsiye ediyoruz.",
+  "appSecWarnBody1": "Uygulamayı güvensiz bir bağlantı ile yüklediniz. Birileri sizi izliyor ve şifrenizi çalmaya çalışıyor olabilir. Eğer tam olarak ne yapacağını anlamadıysanız, uygulamayı durdurmanızı önemle tavsiye ediyoruz.",
   "appSecWarnBody2": "Evet, veritabanı şifrelenmiş durumda, ancak hiç kimse size uygulamanın değiştirilmediğini garanti edemez.",
   "appSecWarnBtn": "Riskleri anlıyorum, devam et",
   "appUnsavedWarn": "Değişiklikler kaydedilmedi!",
