--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -80,7 +80,7 @@
   "menuSetGeneral": "Основні ",
   "menuSetAbout": "Про програму",
   "menuAlertNoTags": "Без тегів",
-  "menuAlertNoTagsBody": "Ви можете додавати нові теги при редагуванні полів в розділі теги. ",
+  "menuAlertNoTagsBody": "Ви можете додавати нові теги при редагуванні полів в розділі Теги.",
   "menuEmptyTrash": "Очистити кошик",
   "menuEmptyTrashAlert": "Очистити кошик? ",
   "menuEmptyTrashAlertBody": "Ви не зможете повернути елементи",
@@ -413,8 +413,8 @@
   "setGenClearMinute": "в хвилину",
   "setGenMinInstead": "Мінімізувати програму замість закриття",
   "setGenLock": "Автоматичне блокування",
-  "setGenLockMinimize": "Авто блокування при мінімізації",
-  "setGenLockCopy": "Блокувати програму після копіювання пароля",
+  "setGenLockMinimize": "При мінімізації",
+  "setGenLockCopy": "Після копіювання пароля",
   "setGenLockAutoType": "При автовведенні",
   "setGenLockOrSleep": "Коли комп'ютер заблоковано або відправлено у сон",
   "setGenStorage": "Сховище",
