--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "¿Vaciar papelera?",
   "menuEmptyTrashAlertBody": "No podrá recuperar los elementos eliminados",
   "menuItemCollapsed": "Doble clic para expandir",
+  "menuRestoreApp": "Abrir {}",
+  "menuQuitApp": "Quitar {}",
   "alertYes": "Sí",
   "alertNo": "No",
   "alertOk": "Aceptar",
@@ -177,8 +179,10 @@
   "searchCase": "Coincidir mayúsculas",
   "searchRegex": "RegEx",
   "searchRank": "Auto",
+  "searchExact": "Extraer",
   "openOpen": "Abrir",
   "openNew": "Nueva",
+  "openNewFile": "Nuevo",
   "openMore": "Más",
   "openDemo": "Demo",
   "openXml": "Importar XML",
@@ -221,6 +225,7 @@
   "openFileNoCacheError": "Fichero no encontrado en el almacenamiento caché. Esto puede suceder por haber limpiado el caché del navegador. Para abrir el fichero, elimínalo de KeeWeb y vuelve a añadirlo.",
   "detAttDownload": "Presiona Mayús-clic sobre el botón para descargarlo o",
   "detAttDelToRemove": "Delete para eliminar",
+  "detAttSave": "Guardar como ...",
   "detEmpty": "Tus contraseñas se mostarán aquí",
   "detGroupRestore": "Para restaurar este grupo, por favor arrástralo a cualquier grupo fuera de la papelera",
   "detHistoryClickPoint": "Haz clic sobre el punto de línea de tiempo del historial para ver el estado",
@@ -411,7 +416,7 @@
   "setGenNoClear": "No limpiar",
   "setGenClearSeconds": "En {} segundos",
   "setGenClearMinute": "En un minuto",
-  "setGenMinInstead": "Minimizar aplicación en vez de cerrar",
+  "setGenMinInstead": "Minimizar la aplicación en vez de cerrarla",
   "setGenLock": "Auto bloqueo",
   "setGenLockMinimize": "Cuando la app está minimizada",
   "setGenLockCopy": "Al copiar contraseña",
@@ -431,7 +436,7 @@
   "setFileLocalHint": "¿Quieres trabajar sin problemas con archivos locales?",
   "setFileDownloadApp": "Descarga la versión de escritorio",
   "setFileSave": "Guardar",
-  "setFileSaveTo": "Guardar a ...",
+  "setFileSaveTo": "Guardar como ...",
   "setFileClose": "Cerrar",
   "setFileSync": "Sincronizar",
   "setFileSyncVerb": "Sincronizar",
@@ -507,10 +512,12 @@
   "setShSave": "guardar todos los archivos",
   "setShGen": "generar contraseña",
   "setShSet": "opciones de aplicación",
-  "setShCopyPassGlobal": "copiar contraseña (cuando la app está en segundo plano)",
-  "setShCopyUserGlobal": "copiar usuario (cuando la app está en segundo plano)",
-  "setShCopyUrlGlobal": "copiar sitio web (cuando la app está en segundo plano)",
-  "setShAutoTypeGlobal": "auto-completado (cuando la app está en segundo plano)",
+  "setShCopyPassGlobal": "copiar contraseña",
+  "setShCopyOtp": "copiar OTP",
+  "setShAutoTypeGlobal": "auto-completado",
+  "setShCopyPassOnly": "copiar contraseña",
+  "setShRestoreApp": "abrir {}",
+  "setShGlobal": "Estos atajos de teclado funcionan cuando la app está en segundo plano. Puedes hacer clic en ellos para seleccionar tu propio atajo.",
   "setShLock": "bloquear base de datos",
   "setShEdit": "Presiona una nueva combinación de teclas para usarla como atajo de teclado",
   "setPlInstallTitle": "Instalar nuevos complementos",
