--- a/docs/translations/fi/fi.json
+++ b/docs/translations/fi/fi.json
@@ -83,6 +83,8 @@
   "menuEmptyTrash": "Tyhjennä roskakori",
   "menuEmptyTrashAlert": "Tyhjennetäänkö roskakori?",
   "menuItemCollapsed": "Kaksoisnapsauta laajentaaksesi",
+  "menuRestoreApp": "Avaa {}",
+  "menuQuitApp": "Lopeta {}",
   "alertYes": "Kyllä",
   "alertNo": "Ei",
   "alertOk": "OK",
@@ -163,8 +165,10 @@
   "searchOptions": "Vaihtoehdot",
   "searchCase": "Täsmää kirjainkoko",
   "searchRegex": "RegEx",
+  "searchExact": "Tarkka",
   "openOpen": "Avaa",
   "openNew": "Uusi",
+  "openNewFile": "Uusi",
   "openMore": "Lisää",
   "openDemo": "Demo",
   "openXml": "Tuo XML-tiedosto",
@@ -201,6 +205,7 @@
   "openListErrorBody": "Tiedostolistan lataamisessa tapahtui virhe",
   "openShowAllFiles": "Näytä kaikki tiedostot",
   "detAttDelToRemove": "Delete poistaaksesi",
+  "detAttSave": "Tallenna nimellä...",
   "detEmpty": "Salasanat näytetään tässä",
   "detHistoryReturn": "palaa kohteelle",
   "detHistoryRevert": "Palaa tilaan",
@@ -400,8 +405,9 @@
   "setShGen": "luo salasana",
   "setShSet": "sovellusasetukset",
   "setShCopyPassGlobal": "kopioi salasana (kun sovellus on taustalla)",
-  "setShCopyUserGlobal": "kopioi käyttäjä (kun sovellus on taustalla)",
-  "setShCopyUrlGlobal": "kopioi verkkosivu (kun sovellus on taustalla)",
+  "setShCopyOtp": "kopioi OTP",
+  "setShCopyPassOnly": "kopioi salasana",
+  "setShRestoreApp": "avaa {}",
   "setShLock": "lukitse tietokanta",
   "setPlInstallTitle": "Asenna uusia lisäosia",
   "setPlInstallLabel": "Lisäosan URL",
