--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "Vider la Corbeille?",
   "menuEmptyTrashAlertBody": "Vous ne pourrez plus récupérer ces éléments",
   "menuItemCollapsed": "Double-cliquer pour déplier",
+  "menuRestoreApp": "Ouvrir {}",
+  "menuQuitApp": "Quitter {}",
   "alertYes": "Oui",
   "alertNo": "Non",
   "alertOk": "OK",
@@ -177,8 +179,10 @@
   "searchCase": "Respecte la casse",
   "searchRegex": "RegEx",
   "searchRank": "Rang",
+  "searchExact": "Exact",
   "openOpen": "Ouvrir",
   "openNew": "Nouveau",
+  "openNewFile": "Nouveau",
   "openMore": "Plus",
   "openDemo": "Démo",
   "openXml": "Importer XML",
@@ -221,6 +225,7 @@
   "openFileNoCacheError": "Fichier non trouvé dans la mémoire cache. Cela peut arriver parce que le stockage du navigateur a été nettoyé. Pour ouvrir le fichier, supprimez-le de KeeWeb et ajoutez-le à nouveau.",
   "detAttDownload": "Cliquer sur le bouton de pièce-jointe en pressant la touche Maj ou",
   "detAttDelToRemove": "Supprimer pour enlever",
+  "detAttSave": "Enregistrer sous",
   "detEmpty": "Vos mots de passe seront affichés ici",
   "detGroupRestore": "Pour restaurer ce groupe, veuillez le glisser-déposer dans un des groupes hors de la corbeille",
   "detHistoryClickPoint": "Cliquer sur une entrée de l'historique pour voir son état",
@@ -508,9 +513,11 @@
   "setShGen": "générer un mot de passe",
   "setShSet": "paramètres",
   "setShCopyPassGlobal": "copier le mot de passe (quand l'appli est en arrière-plan)",
-  "setShCopyUserGlobal": "copier l'utilisateur (quand l'appli est en arrière-plan)",
-  "setShCopyUrlGlobal": "copier le site web (quand l'appli est en arrière-plan)",
+  "setShCopyOtp": "Copier l'OTP",
   "setShAutoTypeGlobal": "saisie automatique (quand l'appli est en arrière-plan)",
+  "setShCopyPassOnly": "Copier mot de passe",
+  "setShRestoreApp": "Ouvrir {}",
+  "setShGlobal": "Ces raccourcis à l'échelle du système fonctionnent lorsque l'application s'exécute en arrière-plan. Vous pouvez cliquer dessus pour sélectionner votre propre raccourci.",
   "setShLock": "verrouiller la base",
   "setShEdit": "Appuyez sur une nouvelle combinaison de touches pour la définir comme raccourci.",
   "setPlInstallTitle": "Installer de nouveaux modules",
