--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "Kiüríti a lomtárat?",
   "menuEmptyTrashAlertBody": "A lomtárból törölt elemek nem visszaállíthatók",
   "menuItemCollapsed": "Kattintson kétszer a kinyitáshoz",
+  "menuRestoreApp": "{} indítása",
+  "menuQuitApp": "{} bezárása",
   "alertYes": "Igen",
   "alertNo": "Nem",
   "alertOk": "OK",
@@ -177,8 +179,10 @@
   "searchCase": "Kis-nagybetű számít",
   "searchRegex": "RegEx",
   "searchRank": "Auto",
+  "searchExact": "Pontos",
   "openOpen": "Megnyit",
   "openNew": "Új",
+  "openNewFile": "Új",
   "openMore": "Továbbiak",
   "openDemo": "Demó",
   "openXml": "XML importálás",
@@ -221,6 +225,7 @@
   "openFileNoCacheError": "A fájl nem található meg a gyorsítótárban. Ez azért fordulhat elő, mert a böngésző gyorsítótára ki lett tisztítva. A fájl megnyitásához, távolítsa el azt a KeeWeb-ből, majd adja hozzá újra.",
   "detAttDownload": "Shift-klikk a csatolmány gombon a letöltéshez vagy",
   "detAttDelToRemove": "Törlés vagy eltávolítás",
+  "detAttSave": "Mentés mint...",
   "detEmpty": "A jelszavai itt fognak megjelenni",
   "detGroupRestore": "A csoport visszaállításához húzza azt bármelyik lomtáron kívüli csoportba.",
   "detHistoryClickPoint": "Kattintson a bejegyzés történetének idővonalán az állapot megtekintéséhez",
@@ -303,6 +308,9 @@
   "detOtpQrWrongBody": "A QR-kódját sikeresen beolvastam, de nem tartalmaz egyszer használatos jelszó adatot.",
   "detLockField": "Zárolja ezt a mezőt, tehát a tartalma nem kereshető és nem látható. A tartalom megjelenítése kizárólag rákattintással lehetséges.",
   "detUnlockField": "Megszünteti a zárolást, tartalmát azonnal kereshetővé és láthatóvá teszi",
+  "detRevealField": "Felfed",
+  "detHideField": "Elrejt",
+  "detAutoTypeField": "Automatikus gépelés",
   "autoTypeEntryFields": "Beviteli mezők",
   "autoTypeModifiers": "Módosító kulcsok",
   "autoTypeKeys": "Kulcsok",
@@ -505,9 +513,11 @@
   "setShGen": "jelszó generálás",
   "setShSet": "alkalmazás beállítások",
   "setShCopyPassGlobal": "jelszó másolása (amikor az alkalmazás háttérben van)",
-  "setShCopyUserGlobal": "felhasználónév másolása (amikor az alkalmazás háttérben van)",
-  "setShCopyUrlGlobal": "weboldal másolása (amikor az alkalmazás háttérben van)",
+  "setShCopyOtp": "OTP másolása",
   "setShAutoTypeGlobal": "automatikus gépelés (amikor az alkalmazás háttérben van)",
+  "setShCopyPassOnly": "jelszó másolása",
+  "setShRestoreApp": "{} megnyitása",
+  "setShGlobal": "Ezek a rendszerszintű gyorsbillentyűk akkor működnek, ha az alkalmazás fut a háttérben. Kattints a saját gyorsbillenytűk kiválasztásához.",
   "setShLock": "adatbázis zárolása",
   "setShEdit": "Üss le egy billentyűkombinációt, hogy beállítsd billentyűparancsnak",
   "setPlInstallTitle": "Új beépülők telepítése",
@@ -586,5 +596,7 @@
   "exportDescription": "{} által generált fájl.",
   "importCsvTitle": "Importálás CSV-ből",
   "importCsvRun": "Importálás",
-  "importIgnoreField": "Mellőz"
+  "importIgnoreField": "Mellőz",
+  "importTo": "Bejegyzések importálása ide",
+  "importNewFile": "Új fájl"
 }
