--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "ゴミ箱を空にしますか?",
   "menuEmptyTrashAlertBody": "項目を元に戻すことはできません",
   "menuItemCollapsed": "展開するにはダブルクリックしてください",
+  "menuRestoreApp": "開く{}",
+  "menuQuitApp": "閉じる{}",
   "alertYes": "はい",
   "alertNo": "いいえ",
   "alertOk": "了解",
@@ -177,8 +179,10 @@
   "searchCase": "大文字小文字を区別",
   "searchRegex": "正規表現",
   "searchRank": "自動",
+  "searchExact": "正確に",
   "openOpen": "開く",
   "openNew": "新規作成",
+  "openNewFile": "新規",
   "openMore": "更に表示",
   "openDemo": "デモ",
   "openXml": "XMLをインポート",
@@ -221,6 +225,7 @@
   "openFileNoCacheError": "キャッシュストレージにファイルが見つかりません。 これは、ブラウザのストレージがクリーンアップされたために発生する可能性があります。 ファイルを開くには、KeeWebから削除して再度追加します。",
   "detAttDownload": "Shift+添付ファイルボタンでダウンロード、または",
   "detAttDelToRemove": "Deleteで削除",
+  "detAttSave": "…を保存",
   "detEmpty": "あなたのパスワードがここに表示されます",
   "detGroupRestore": "このグループを復元するには、ごみ箱の外のグループにドラッグしてください",
   "detHistoryClickPoint": "エントリ履歴をクリックするとタイムラインの状態を表示します",
@@ -507,10 +512,12 @@
   "setShSave": "全ファイルを保存する",
   "setShGen": "パスワードを生成する",
   "setShSet": "アプリの設定",
-  "setShCopyPassGlobal": "パスワードをコピーする (アプリがバックグランドで動作しているとき)",
-  "setShCopyUserGlobal": "ユーザーをコピーする (アプリがバックグランドで動作しているとき)",
-  "setShCopyUrlGlobal": "ウェブサイトをコピーする (アプリがバックグランドで動作しているとき)",
-  "setShAutoTypeGlobal": "自動入力を実行する (アプリがバックグランドで動作しているとき)",
+  "setShCopyPassGlobal": "パスワードをコピーする",
+  "setShCopyOtp": "OTPをコピーする",
+  "setShAutoTypeGlobal": "自動入力を実行する",
+  "setShCopyPassOnly": "パスワードをコピーする",
+  "setShRestoreApp": "開く{}",
+  "setShGlobal": "これらのシステム全体のショートカットは、アプリがバックグラウンドで実行されているときに機能します。 それらをクリックして、独自のショートカットを選択できます。",
   "setShLock": "データベースをロックする",
   "setShEdit": "新しいキーの組み合わせを押して、ショートカットとして設定します",
   "setPlInstallTitle": "新しいプラグインのインストール",
