--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -182,6 +182,7 @@
   "searchExact": "Exact",
   "openOpen": "Openen",
   "openNew": "Nieuw",
+  "openNewFile": "Nieuw",
   "openMore": "Meer",
   "openDemo": "Demo",
   "openXml": "XML importeren",
@@ -198,7 +199,7 @@
   "openPassFor": "Wachtwoord",
   "openRemoveLastQuestion": "Lokaal bestand verwijderen? ",
   "openRemoveLastQuestionBody": "Het te verwijderen bestand is alleen opgeslagen in de app. Permanent verwijderen?",
-  "openRemoveLastQuestionModBody": "Het bestand dat u wilt verwijderen heeft lokale wijzigingen. Wilt u het bestand verwijderen en deze wijzigingen ongedaan maken?",
+  "openRemoveLastQuestionModBody": "Het bestand dat je wilt verwijderen heeft lokale wijzigingen. Wil je het bestand verwijderen en deze wijzigingen ongedaan maken?",
   "openLocalFile": "Lokaal bestand",
   "openLocalFileBody": "Het te openen bestand wordt opgeslagen in de app. Wijzigingen worden niet opgeslagen op het bestandssysteem. Het gegevensbestand kan worden geëxporteerd vanuit Instellingen.",
   "openLocalFileDontShow": "Niet opnieuw weergeven",
@@ -221,9 +222,10 @@
   "openErrorFileNotFound": "Bestand niet gevonden",
   "openListErrorBody": "Fout bij het laden van de bestandenlijst",
   "openShowAllFiles": "Alle bestanden weergeven",
-  "openFileNoCacheError": "Bestand niet gevonden in de cache-opslag. Dit kan gebeuren omdat de browseropslag is opgeschoond. Om het bestand te openen, verwijdert u het uit KeeWeb en voegt u het opnieuw toe.",
+  "openFileNoCacheError": "Bestand niet aangetroffen in de cache-opslag. Dit kan gebeuren omdat de browseropslag is gewist. Om het bestand te openen moet je het eerst verwijderen uit KeeWeb en daarna opnieuw toevoegen.",
   "detAttDownload": "Shift-klik de bijlage-knop om deze te downloaden of",
   "detAttDelToRemove": "Verwijderen om te wissen",
+  "detAttSave": "Opslaan als...",
   "detEmpty": "Je wachtwoorden worden hier weergegeven",
   "detGroupRestore": "Om deze groep te herstellen sleep je het naar een willekeurige groep buiten de prullenbak",
   "detHistoryClickPoint": "Klik op het item in de geschiedenistijdlijn om de status te bekijken",
@@ -293,7 +295,7 @@
   "detSetupOtpAlertBody2": "2. maak een screenshot van de QR-code {}",
   "detSetupOtpAlertBody3": "3. plak het hier {}",
   "detSetupOtpAlertBody3Mobile": "3. gebruik Selecteer/Scan-knop hieronder om te selecteren of scannen met de camera",
-  "detSetupOtpAlertBody4": "Klik op Code handmatig invoeren als u de code niet kan scannen",
+  "detSetupOtpAlertBody4": "Klik op Code handmatig invoeren als je de code niet kan scannen",
   "detSetupOtpManualButton": "Code handmatig invoeren",
   "detSetupOtpScanButton": "Selecteer/Scan",
   "detSetupOtpAlertBodyWith": "met {}",
@@ -304,7 +306,7 @@
   "detOtpQrErrorBody": "Sorry, we konden de QR-code niet lezen, probeer het nog eens of neem contact op met de app makers en geef de details van de foutmelding door.",
   "detOtpQrWrong": "Verkeerde QR-code",
   "detOtpQrWrongBody": "De QR-code was succesvol gescand, maar het bevat niet de data van een eenmalig wachtwoord.",
-  "detLockField": "Vergrendel dit veld opdat de inhoud niet doorzoekbaar en zichtbaar is. Als u de inhoud wilt weergeven, moet u er expliciet op klikken.",
+  "detLockField": "Vergrendel dit veld opdat de inhoud niet doorzoekbaar en zichtbaar is. Als je de inhoud wilt weergeven, moet je er expliciet op klikken.",
   "detUnlockField": "Ontgrendel dit veld zodat de inhoud direct doorzoekbaar en zichtbaar wordt.",
   "detRevealField": "Weergeven",
   "detHideField": "Verbergen",
@@ -431,7 +433,7 @@
   "setFilePath": "Bestandspad",
   "setFileStorage": "Dit bestand is geladen van {}.",
   "setFileIntl": "Dit bestand is opgeslagen in de interne app-storage.",
-  "setFileLocalHint": "Wilt u naadloos werken met lokale bestanden?",
+  "setFileLocalHint": "Wil je naadloos werken met lokale bestanden?",
   "setFileDownloadApp": "Download de bureaublad-app",
   "setFileSave": "Opslaan",
   "setFileSaveTo": "Opslaan als...",
@@ -453,7 +455,7 @@
   "setFileSelKeyFile": "Selecteer een sleutelbestand",
   "setFileNames": "Namen",
   "setFileDefUser": "Standaardgebruiker",
-  "setFileEnableTrash": "Prullenbak aan",
+  "setFileEnableTrash": "Prullenbak gebruiken",
   "setFileHistLen": "Lengte van historie, bewaar laatste versies per invoer",
   "setFileHistSize": "Grootte van historie, totaal MB per bestand",
   "setFileBackups": "Reservekopie",
@@ -487,7 +489,7 @@
   "setFileSaveError": "Fout bij opslaan",
   "setFileSaveErrorBody": "Fout bij opslaan naar bestand",
   "setFileAlreadyExists": "Bestaat al",
-  "setFileAlreadyExistsBody": "Bestand {} bestaat al. Wilt u het overschrijven?",
+  "setFileAlreadyExistsBody": "Bestand {} bestaat al. Wil je het overschrijven?",
   "setFileUnsaved": "Niet-opgeslagen wijzigingen ",
   "setFileUnsavedBody": "Er zijn niet-opgeslagen wijzigingen in dit bestand",
   "setFileCloseNoSave": "Sluiten en wijzigingen ongedaan maken",
@@ -511,9 +513,11 @@
   "setShGen": "wachtwoord genereren",
   "setShSet": "app-instellingen",
   "setShCopyPassGlobal": "kopieer wachtwoord (met de app in de achtergrond)",
-  "setShCopyUserGlobal": "kopieer gebruikersnaam (met de app in de achtergrond)",
-  "setShCopyUrlGlobal": "kopieer website (met de app in de achtergrond)",
+  "setShCopyOtp": "Eenmalig wachtwoord kopiëren",
   "setShAutoTypeGlobal": "auto-type (met de app in de achtergrond)",
+  "setShCopyPassOnly": "Wachtwoord kopiëren",
+  "setShRestoreApp": "{} openen",
+  "setShGlobal": "Globale sneltoetsen zijn actief terwijl de app in de achtergrond draait. Je kunt een sneltoets klikken om deze aan te passen.",
   "setShLock": "database blokkeren",
   "setShEdit": "Druk een nieuwe toetscombinatie om deze in te stellen als sneltoets",
   "setPlInstallTitle": "Nieuwe plug-ins installeren",
@@ -570,8 +574,8 @@
   "dropboxAppKey": "Dropbox app-key",
   "dropboxAppKeyDesc": "Kopieer de app-key van je Dropbox app (Developer settings)",
   "dropboxFolder": "App-folder",
-  "dropboxFolderDesc": "Als je app gekoppeld is aan je hele Dropbox (dus niet alleen een app folder), stel hier dan de folder met je kdbx-bestanden in",
-  "dropboxFolderSettingsDesc": "Kies een folder in je Dropbox waar bestanden worden opgeslagen (standaard: de Dropbox hoofdmap)",
+  "dropboxFolderDesc": "Als je app gekoppeld is aan je hele Dropbox (dus niet alleen een app folder), stel hier dan de map met je kdbx-bestanden in",
+  "dropboxFolderSettingsDesc": "Kies een map in je Dropbox waar bestanden worden opgeslagen (standaard: de Dropbox hoofdmap)",
   "dropboxFolderPlaceholder": "standaardmap",
   "dropboxLink": "Koppel de app aan",
   "dropboxLinkApp": "App-folder (Apps/KeeWeb)",
