--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -182,6 +182,7 @@
   "searchExact": "Dokładny",
   "openOpen": "Otwórz",
   "openNew": "Nowy",
+  "openNewFile": "Nowy",
   "openMore": "Więcej",
   "openDemo": "Demo",
   "openXml": "Importuj XML",
@@ -224,6 +225,7 @@
   "openFileNoCacheError": "Nie znaleziono pliku w pamięci podręcznej. Może się tak zdarzyć, ponieważ pamięć przeglądarki została wyczyszczona. Aby otworzyć plik, usuń go z KeeWeb i dodaj go ponownie.",
   "detAttDownload": "Shift+kliknięcie przycisku załącznika, aby pobrać, albo",
   "detAttDelToRemove": "Delete, aby usunąć",
+  "detAttSave": "Zapisz jako …",
   "detEmpty": "Twoje hasła zostaną tutaj wyświetlone",
   "detGroupRestore": "Aby przywrócić tę grupę, proszę przeciągnąć ją do innej grupy poza koszem",
   "detHistoryClickPoint": "Kliknij punkt na osi czasu wpisu, aby zobaczyć stan",
@@ -434,7 +436,7 @@
   "setFileLocalHint": "Chcesz bezproblemowo pracować z plikami lokalnymi?",
   "setFileDownloadApp": "Pobierz aplikację desktopową",
   "setFileSave": "Zapisz",
-  "setFileSaveTo": "Zapisz do...",
+  "setFileSaveTo": "Zapisz do ...",
   "setFileClose": "Zamknij",
   "setFileSync": "Synchronizacja",
   "setFileSyncVerb": "Synch.",
@@ -510,10 +512,12 @@
   "setShSave": "Zapisz wszystkie pliki",
   "setShGen": "Wygeneruj hasło",
   "setShSet": "Ustawienia aplikacji",
-  "setShCopyPassGlobal": "Skopiuj hasło (gdy ta aplikacja jest w tle)",
-  "setShCopyUserGlobal": "Skopiuj użytkownika (gdy ta aplikacja jest w tle)",
-  "setShCopyUrlGlobal": "Skopiuj stronę WWW (gdy ta aplikacja jest w tle)",
-  "setShAutoTypeGlobal": "Auto-type (gdy ta aplikacja jest w tle)",
+  "setShCopyPassGlobal": "Skopiuj hasło",
+  "setShCopyOtp": "Skopiuj OTP",
+  "setShAutoTypeGlobal": "Auto-type",
+  "setShCopyPassOnly": "Skopiuj hasło",
+  "setShRestoreApp": "Otwórz {}",
+  "setShGlobal": "Te ogólnosystemowe skróty działają, gdy aplikacja jest uruchomiona w tle. Możesz je kliknąć, aby wybrać własny skrót.",
   "setShLock": "Zablokuj bazę danych",
   "setShEdit": "Naciśnij nową kombinację klawiszy, aby ustawić ją jako skrót",
   "setPlInstallTitle": "Zainstaluj nowe wtyczki",
