--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "Очистить корзину?",
   "menuEmptyTrashAlertBody": "Ваши данные будут удалены навсегда",
   "menuItemCollapsed": "Нажмите дважды, чтобы развернуть",
+  "menuRestoreApp": "Открыть {}",
+  "menuQuitApp": "Выйти из {}",
   "alertYes": "Да",
   "alertNo": "Нет",
   "alertOk": "ОК",
@@ -177,8 +179,10 @@
   "searchCase": "С учетом регистра",
   "searchRegex": "RegEx",
   "searchRank": "Класс",
+  "searchExact": "Полное совпадение",
   "openOpen": "Открыть",
   "openNew": "Создать",
+  "openNewFile": "Новый",
   "openMore": "Больше",
   "openDemo": "Демо",
   "openXml": "Импорт XML",
@@ -221,6 +225,7 @@
   "openFileNoCacheError": "Файл не найден в кэше. Это могло произойти из-за очистки хранилища браузера. Для открытия файла удалите его из KeeWeb и добавьте снова.",
   "detAttDownload": "Нажмите Shift и кликните по вложению чтобы загрузить или",
   "detAttDelToRemove": "Delete для удаления",
+  "detAttSave": "Сохранить как ...",
   "detEmpty": "Здесь будут отображаться ваши пароли",
   "detGroupRestore": "Чтобы восстановить эту группу, перетащите ее в любую группу вне корзины",
   "detHistoryClickPoint": "Нажмите на точку на временной шкале, чтобы увидеть состояние",
@@ -508,9 +513,10 @@
   "setShGen": "создать пароль",
   "setShSet": "настройки приложения",
   "setShCopyPassGlobal": "скопировать пароль (когда приложение работает в фоновом режиме)",
-  "setShCopyUserGlobal": "скопировать имя пользователя (когда приложение работает в фоновом режиме)",
-  "setShCopyUrlGlobal": "копировать сайт (когда приложение работает в фоновом режиме)",
+  "setShCopyOtp": "скопировать OTP",
   "setShAutoTypeGlobal": "автозаполнение (когда приложение работает в фоновом режиме)",
+  "setShCopyPassOnly": "скопировать пароль",
+  "setShRestoreApp": "открыть {}",
   "setShLock": "заблокировать базу данных",
   "setShEdit": "Нажмите новую комбинацию клавиш",
   "setPlInstallTitle": "Установить новые плагины",
