--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -80,7 +80,7 @@
   "menuSetGeneral": "Genel",
   "menuSetAbout": "Hakkında",
   "menuAlertNoTags": "Etiket yok",
-  "menuAlertNoTagsBody": "Boşlukları doldururken etiketler bölümünde yeni etiketler ekleyebilirsiniz.",
+  "menuAlertNoTagsBody": "Alanları düzenlerken, etiketler bölümünde yeni etiketler ekleyebilirsiniz.",
   "menuEmptyTrash": "Çöpü Boşalt",
   "menuEmptyTrashAlert": "Çöp Boşaltılsın Mı? ",
   "menuEmptyTrashAlertBody": "Ögeler geri gelmeyecektir",
@@ -151,7 +151,7 @@
   "keyChangeRepeatPassword": "Şifre, bir kez daha",
   "keyEnter": "Gir",
   "iconFavTitle": "Site simgesini indir ve kullan",
-  "iconSelCustom": "Özel simge seçin",
+  "iconSelCustom": "Özel simge seç",
   "listEmptyTitle": "Boş",
   "listEmptyAdd": "Yukarıdaki {} düğmesini kullanın",
   "listGroup": "Küme",
@@ -178,10 +178,11 @@
   "searchOptions": "Seçenekler",
   "searchCase": "Durum eşleştir",
   "searchRegex": "Düzenli ifade",
-  "searchRank": "Sıra",
+  "searchRank": "Otomatik",
   "searchExact": "Kesin",
   "openOpen": "Aç",
   "openNew": "Yeni",
+  "openNewFile": "Yeni",
   "openMore": "Dahası",
   "openDemo": "Tanıtım",
   "openXml": "XML'den Aktar",
@@ -224,6 +225,7 @@
   "openFileNoCacheError": "Önbellek deposunda dosya bulunamadı. Bu olabilir, çünkü tarayıcı depolama alanı temizlendi. Dosyayı açmak için, KeeWeb'den kaldırın ve tekrar ekleyin.",
   "detAttDownload": "İndirmek için ek dosya butonuna Shift tuşuna basarak tıklayın ya da",
   "detAttDelToRemove": "Kaldırmak için sil",
+  "detAttSave": "Farklı kaydet",
   "detEmpty": "Parolalarınız burada gösterilecek",
   "detGroupRestore": "Bu kümeyi geri yüklemek için lütfen çöp kutusunun dışındaki herhangi bir kümeye sürükleyin",
   "detHistoryClickPoint": "Durumu görüntülemek için girdi geçmişine ait zaman çizelgesi noktasına tıklayın",
@@ -510,17 +512,19 @@
   "setShSave": "tüm dosyaları kaydet",
   "setShGen": "parola oluştur",
   "setShSet": "uygulama ayarları",
-  "setShCopyPassGlobal": "parolayı kopyala (uygulama arka planda iken)",
-  "setShCopyUserGlobal": "kullanıcıyı kopyala (uygulama arka planda iken)",
-  "setShCopyUrlGlobal": "web sitesini kopyala (uygulama arka planda iken)",
-  "setShAutoTypeGlobal": "otomatik yazım (uygulama arka planda iken)",
+  "setShCopyPassGlobal": "parolayı kopyala",
+  "setShCopyOtp": "OTP kopyala",
+  "setShAutoTypeGlobal": "otomatik yazım",
+  "setShCopyPassOnly": "Parolayı kopyala",
+  "setShRestoreApp": "Aç {}",
+  "setShGlobal": "Uygulama arka planda çalışırken sistem genelinde çalışan bu kısayollar çalışır. Kendi kısayolunuzu seçmek için üzerilerine tıklayabilirsiniz",
   "setShLock": "veritabanını kilitle",
   "setShEdit": "Kısayol olarak ayarlamak için yeni bir tuş bileşimine basın",
-  "setPlInstallTitle": "Yeni eklentiler yükle",
+  "setPlInstallTitle": "Yeni eklentiler kur",
   "setPlInstallDesc": "KeeWeb eklentileri KeeWeb'e özellikler, temalar ve diller ekler. Eklentiler, KeeWeb ile aynı ayrıcalıklarla çalışır, tüm parolalara erişebilir ve yönetebilirler. Güvenmediğiniz eklentileri asla yüklemeyin.",
   "setPlInstallLabel": "Eklenti URL'si",
-  "setPlInstallBtn": "Yükle",
-  "setPlInstallBtnProgress": "Yükleniyor",
+  "setPlInstallBtn": "Kur",
+  "setPlInstallBtnProgress": "Kuruluyor",
   "setPlUninstallBtn": "Kaldır",
   "setPlDisableBtn": "Devre dışı",
   "setPlEnableBtn": "Etkin",
