--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "确认清空回收站？",
   "menuEmptyTrashAlertBody": "您将无法恢复这些项目",
   "menuItemCollapsed": "双击以展开",
+  "menuRestoreApp": "打开 {}",
+  "menuQuitApp": "退出 {}",
   "alertYes": "确定",
   "alertNo": "取消",
   "alertOk": "确定",
@@ -109,6 +111,8 @@
   "genPresetMac": "MAC address",
   "genPresetHash128": "128-bit hash",
   "genPresetHash256": "256-bit hash",
+  "genHidePass": "隐藏密码",
+  "genShowPass": "显示密码",
   "grpTitle": "分组",
   "grpSearch": "允许搜索此分组下的记录",
   "grpAutoType": "启用自动键入",
@@ -174,8 +178,11 @@
   "searchOptions": "选项",
   "searchCase": "区分大小写",
   "searchRegex": "正则表达式",
+  "searchRank": "自动排序",
+  "searchExact": "精确",
   "openOpen": "打开",
   "openNew": "新建",
+  "openNewFile": "新建",
   "openMore": "更多",
   "openDemo": "演示",
   "openXml": "导入 XML",
@@ -215,8 +222,10 @@
   "openErrorFileNotFound": "未找到文件",
   "openListErrorBody": "加载文件列表时出现错误",
   "openShowAllFiles": "显示所有文件",
+  "openFileNoCacheError": "无法在缓存中找到文件。发生这个现象是由于浏览器缓存被清除。如需打开文件，请将原文件从KeeWeb中移除，并再次添加。",
   "detAttDownload": "Shift+点击 附件 按钮下载或按",
   "detAttDelToRemove": "Delete 键删除文件",
+  "detAttSave": "另存为",
   "detEmpty": "您的密码会显示在这里",
   "detGroupRestore": "要恢复分组，请将其从回收站中拖放到任意其它分组",
   "detHistoryClickPoint": "点击记录历史时间轴上的点来查看状态",
@@ -269,6 +278,7 @@
   "detMenuCopyUser": "复制用户名",
   "detSetupOtp": "一次性密码",
   "detClone": "制作副本",
+  "detCopyEntryToClipboard": "复制所有字段",
   "detClonedName": "复制",
   "detAutoType": "自动输入",
   "detAutoTypeSettings": "自动键入设置",
@@ -298,6 +308,9 @@
   "detOtpQrWrongBody": "您的二维码扫描成功，但未包含一次性密码数据。",
   "detLockField": "锁定该字段，锁定后其内容将不可被搜索及不可见。如需显示相关内容，请单击该字段。",
   "detUnlockField": "取消锁定该字段，使其内容立刻可被搜索及可见",
+  "detRevealField": "提示",
+  "detHideField": "隐藏",
+  "detAutoTypeField": "自动填充",
   "autoTypeEntryFields": "记录字段",
   "autoTypeModifiers": "修饰键",
   "autoTypeKeys": "按键",
@@ -313,6 +326,8 @@
   "autoTypeSelectionHint": "输入自动类型序列",
   "autoTypeSelectionHintAction": "仅输入密码",
   "autoTypeSelectionHintOpt": "仅输入用户名",
+  "autoTypeSelectionHintShift": "其它字段",
+  "autoTypeSelectionOtp": "一次性密码",
   "appSecWarn": "不安全！",
   "appSecWarnBody1": "您已经通过不安全的连接加载当前应用，您有被监控和密码失窃的风险。我们强烈建议您停止使用，除非您清楚地了解自己在做什么。",
   "appSecWarnBody2": "是的，你的数据库是加密的，但无法保证保证您所获取的应用未被修改。",
@@ -381,6 +396,7 @@
   "setGenShowSubgroups": "显示所有子分组的记录",
   "setGenTableView": "以表格视图显示记录",
   "setGenColorfulIcons": "在列表中显示彩色图标",
+  "setGenDirectAutotype": "如果仅找到一个匹配的条目，将自动填充",
   "setGenFunction": "功能",
   "setGenAutoSyncOnClose": "在关闭程序时自动保存和同步",
   "setGenAutoSyncTimer": "定时自动保存和同步",
@@ -413,6 +429,7 @@
   "setGenTryBetaWarning": "未保存的文件",
   "setGenTryBetaWarningBody": "请保存所有文件，并再次点击按钮。",
   "setGenShowAppLogs": "显示应用日志",
+  "setGenReloadApp": "重新加载应用",
   "setFilePath": "文件路径",
   "setFileStorage": "文件加载自 {}。",
   "setFileIntl": "文件保存在程序内部",
@@ -424,6 +441,7 @@
   "setFileSync": "同步",
   "setFileSyncVerb": "同步",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "上次同步",
   "setFileLastSyncUnknown": "未知",
   "setFileSyncInProgress": "同步中",
@@ -476,6 +494,7 @@
   "setFileUnsavedBody": "此文件有未保存的更改",
   "setFileCloseNoSave": "关闭并放弃更改",
   "setFileDontClose": "不要关闭",
+  "setFileFormatVersion": "文件格式",
   "setShTitle": "快捷键",
   "setShShowAll": "显示所有项",
   "setShColors": "显示有颜色的项",
@@ -493,10 +512,11 @@
   "setShSave": "保存所有文件",
   "setShGen": "生成密码",
   "setShSet": "应用设置",
-  "setShCopyPassGlobal": "复制密码 (当应用在后台运行时)",
-  "setShCopyUserGlobal": "复制用户名 (当应用在后台运行时)",
-  "setShCopyUrlGlobal": "复制站点 (当应用在后台运行时)",
-  "setShAutoTypeGlobal": "自动输入 (当应用在后台运行时)",
+  "setShCopyPassGlobal": "复制密码",
+  "setShCopyOtp": "复制一次性密码",
+  "setShAutoTypeGlobal": "自动输入",
+  "setShCopyPassOnly": "复制密码",
+  "setShRestoreApp": "打开 {}",
   "setShLock": "锁定数据库",
   "setPlInstallTitle": "安装新插件",
   "setPlInstallDesc": "KeeWeb 插件能够添加功能、主题与语言至 KeeWeb 。插件以与 KeeWeb 同样的等级运行，它们能够读取和管理您的全部密码。永远不要安装不信任的插件。",
@@ -569,5 +589,12 @@
   "authPopupRequiredBody": "请在您的浏览器中允许此应用弹出窗口。",
   "exportFileInfo": "文件信息",
   "exportHtmlName": "名称",
-  "exportGenerator": "软件"
+  "exportHtmlDate": "导出数据",
+  "exportGenerator": "软件",
+  "exportDescription": "此文件由 {} 生成。",
+  "importCsvTitle": "从CSV文件导入",
+  "importCsvRun": "导入",
+  "importIgnoreField": "忽略",
+  "importTo": "条目将被导入到",
+  "importNewFile": "新文件"
 }
