--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -182,6 +182,7 @@
   "searchExact": "Exakt",
   "openOpen": "Öffnen",
   "openNew": "Neu",
+  "openNewFile": "Neu",
   "openMore": "Mehr",
   "openDemo": "Demo",
   "openXml": "XML importieren",
@@ -224,6 +225,7 @@
   "openFileNoCacheError": "Die Datei wurde im Cache-Speicher nicht gefunden. Möglicherweise wurde Ihr Browser-Speicher geleert. Um die Datei zu öffnen, entfernen Sie sie aus KeeWeb und fügen Sie sie erneut hinzu",
   "detAttDownload": "Umschalttaste + Klick auf den Anhang-Button zum Herunterladen oder",
   "detAttDelToRemove": "Backspace zum entfernen",
+  "detAttSave": "Speichern unter...",
   "detEmpty": "Ihre Passwörter werden hier angezeigt",
   "detGroupRestore": "Ziehen Sie diese Gruppe in eine andere Gruppe als den Papierkorb, um sie wiederherzustellen.",
   "detHistoryClickPoint": "Klicken Sie auf einen der Punkte im Verlauf um den entsprechenden Zustand des Eintrags anzuzeigen",
@@ -324,7 +326,7 @@
   "autoTypeSelectionHint": "Die Auto-Type Abfolge eintippen",
   "autoTypeSelectionHintAction": "Nur das Passwort eintippen",
   "autoTypeSelectionHintOpt": "Nur den Benutzernamen eintippen",
-  "autoTypeSelectionHintShift": "Andere Folder",
+  "autoTypeSelectionHintShift": "Andere Felder",
   "autoTypeSelectionOtp": "Einweg-Passwort",
   "appSecWarn": "Unsichere Verbindung!",
   "appSecWarnBody1": "Sie haben diese App über eine ungesicherte Verbindung geöffnet, Sie könnten beobachtet und Ihre Passwörter könnten gestohlen werden. Wir empfehlen Ihnen dringend, die App hier nicht weiter zu nutzen, wenn Sie nicht genau wissen, was Sie tun.",
@@ -510,10 +512,12 @@
   "setShSave": "alle Dateien speichern",
   "setShGen": "Passwort generieren",
   "setShSet": "App-Einstellungen",
-  "setShCopyPassGlobal": "Passwort kopieren (wenn die App im Hintergrund ist)",
-  "setShCopyUserGlobal": "Benutzer kopieren (wenn die App im Hintergrund ist)",
-  "setShCopyUrlGlobal": "Website kopieren (wenn die App im Hintergrund ist)",
-  "setShAutoTypeGlobal": "Auto-Type (wenn die App im Hintergrund ist)",
+  "setShCopyPassGlobal": "Passwort kopieren",
+  "setShCopyOtp": "Einweg-Passwort kopieren",
+  "setShAutoTypeGlobal": "Auto-Type",
+  "setShCopyPassOnly": "Passwort kopieren",
+  "setShRestoreApp": "{} öffnen",
+  "setShGlobal": "Diese systemweiten Tastenkürzel funktionieren auch, wenn die App im Hintergrund läuft. Klicken Sie auf einen Eintrag, um ein eigenes Kürzel festzulegen.",
   "setShLock": "Datenbank sperren",
   "setShEdit": "Drücken Sie eine Tastenkombination, um diese als Kürzel zu setzen",
   "setPlInstallTitle": "Neue Plugins installieren",
@@ -584,7 +588,7 @@
   "launcherSave": "Passwort-Datenbank speichern",
   "launcherFileFilter": "KeePass-Dateien",
   "authPopupRequired": "Pop-Ups blockiert",
-  "authPopupRequiredBody": "Bitte erlauben Sie Pop-Ups für diese App in Ihrem Browser.",
+  "authPopupRequiredBody": "Bitte erlauben Sie Pop-Ups in Ihrem Browser.",
   "exportFileInfo": "Dateiinformationen",
   "exportHtmlName": "Name",
   "exportHtmlDate": "Exportdatum",
